--- a/assets/create/lang/zh_tw.json
+++ b/assets/create/lang/zh_tw.json
@@ -1785,7 +1785,7 @@
 	"create.tooltip.randomWipDescription5": "相信我，你現在已經沒有回頭路了。",
 	"create.tooltip.randomWipDescription6": "如果你使用這個東西，那麼本作者與它造成的任何後果沒有責任。",
 	"create.tooltip.randomWipDescription7": "這東西不是給你用的，換個吧",
-	"create.tooltip.randomWipDescription8": "哀",
+	"create.tooltip.randomWipDescription8": "看來只能說掰掰了",
 	
 	"_": "Thank you for translating Create!"
 	
